YONK-644: Category/subcategory appears for learner at top of navigator behind TA's Name fix
Conflicts:
	static/scss/courses/discussion.scss

--- a/static/css/courses.css
+++ b/static/css/courses.css
@@ -261,7 +261,7 @@
 }
 #courseDetailsMainModal .courseModalDescription
 {
-	margin-bottom 20px;
+	margin-bottom: 20px;
 }
 .loadingIcon.hidden
 {
